# ml-dump

./: pyproject.toml
cifar-10/: README.md  cifar_torch.py
