[project]
name = "ml-dump"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "torch>=2.4.0",
    "scikit-learn",
    "pandas>=2.2.2",
    "matplotlib>=3.9.2",
    "torchmetrics>=1.4.1",
    "tqdm>=4.66.5",
    "torchvision>=0.19.1",
    "isort>=5.13.2",
]

[tool.uv.pip]
universal= true
